--- a/src/assets/manifest.json
+++ b/src/assets/manifest.json
@@ -1,6 +1,19 @@
 {
+    "id": "countdown",
     "short_name": "Contagem Regressiva",
     "name": "App Contagem Regressiva",
+    "description": "App de Contagem Regressiva",
+    "start_url": "/",    
+    "background_color": "#FFFFFF",
+    "display": "standalone",
+    "display_override": ["window-control-overlay", "minimal-ui"],
+    "orientation": "portrait",
+    "lang": "pt",
+    "scope": "./",
+    "theme_color": "#008000",
+    "related_applications": [],
+    "prefer_related_applications": false,  
+
     "icons": [
       {
         "src": "/assets/icons/maskable_icon_x48.png",
@@ -38,14 +51,6 @@
         "sizes": "512x512"
       }
     ],
-    "id": "countdown",
-    "start_url": "/",
-    "background_color": "#FFFFFF",
-    "display": "standalone",
-    "display_override": ["window-control-overlay", "minimal-ui"],
-    "orientation": "portrait",
-    "scope": "/",
-    "theme_color": "#008000",
     "shortcuts": [
       {
         "name": "Quanto tempo falta?",
@@ -54,6 +59,5 @@
         "url": "/",
         "icons": [{ "src": "/assets/icons/maskable_icon_x192.png", "sizes": "192x192" }]
       }
-    ],
-    "description": "App de Contagem Regressiva"
+    ]    
   }
