--- a/angular.json
+++ b/angular.json
@@ -36,7 +36,8 @@
             "assets": [
               "src/favicon.ico",
               "src/assets",
-              "src/robots.txt"
+              "src/robots.txt",
+              "src/ads.txt"
             ],
             "styles": [
               "src/styles.scss"
