--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@angular/router": "^15.0.0",
     "@angular/service-worker": "^15.2.9",
     "rxjs": "~7.5.0",
+    "slugify": "^1.6.6",
     "subsink": "^1.0.2",
     "tslib": "^2.3.0",
     "zone.js": "~0.12.0"
